--- a/index1.html
+++ b/index1.html
@@ -45,9 +45,10 @@
 
 <script>
 
-    let panier = [
 
-    ];
+const panier = JSON.parse(localStorage.getItem("panier"));
+console.log(panier);
+
         const img = [
             { id: "salade",  image_nrml: "salade.png", image_sel: "" },
             { id: "pain",  image_nrml: "pain.png", image_sel: "pain 2.png" },
@@ -56,6 +57,17 @@
         ];
     //prend tout les boutons ingrédients
 
+    const ingredient = document.querySelectorAll(".ingredient");
+    ingredient.forEach(ing => {
+        console.log(panier)
+        //si l'ingrédient est dans le panier au chargement de la page
+        if (panier.includes(ing.id)) {
+            ing.innerHTML = `<img class="imgingredient" src="${img.find(i => i.id === ing.id).image_sel}" alt="">`;
+        }
+    });
+
+
+    /*
     let btningredient = document.querySelectorAll(".ingredient");
     btningredient.forEach(button => {
         button.addEventListener("click", function() {
@@ -82,7 +94,7 @@
 
         });
     });
-
+*/
 
 const API_KEY  = "AIzaSyBWQV1wAHjnpihCP80oBuhy5iVoAtO8jd0";
 const API_URL = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent`
