c'est la fin omg

--- a/accueil.html
+++ b/accueil.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="logo Yuumi.png" alt="logo Yuumi" class="logo">
+        <img src="img/logo Yuumi.png" alt="logo Yuumi" class="logo">
         <p id="title">Hey beber 👋</p>
     </header>
     <main>
@@ -28,27 +28,29 @@
                 <button id="fileButton">Choisir une image</button>
 
                 <p class="type">Ajouter une <br>photo</p>
-                <img src="icone_ajouter_une_image.png" alt="icone ajouter une photo">
+                <img src="img/icone_ajouter_une_image.png" alt="icone ajouter une photo">
             </div>
             <div>
                 <p id="ou"><u>ou</u></p>
             </div>
             <div class="infoicone">
                 <p class="type">Prendre une <br>photo</p>
-                <img src="icone_prendre_une_photo.png" alt="icone prendre une photo">
+                <img src="img/icone_prendre_une_photo.png" alt="icone prendre une photo">
             </div>
         </div>
         <div id="recipes">
             <p id="titlerecipe">Vos recettes récentes :</p>
                 <div class="recipe-card">
-                    <img src="39917640.png" alt="Recette 1" class="recipe-image">
+                    <a href="recipe.html">
+                    <img src="img/39917640.png" alt="Recette 1" class="recipe-image">
+                    </a>
                     <div class="recipe-info">
                         <p>Recette 1</p>
                         <p>description bla bla bla miam tartiflette</p>
                     </div>
                 </div>
                 <div class="recipe-card">
-                    <img src="39917640.png" alt="Recette 1" class="recipe-image">
+                    <img src="img/39917640.png" alt="Recette 1" class="recipe-image">
                     <div class="recipe-info">
                         <p>Recette 1</p>
                         <p>description bla bla bla miam tartiflette</p>
@@ -59,11 +61,12 @@
     </main>
     <footer>
         <div id="buttonsgenerercontainer">
-            <div id="btngenerer"><img src="logo Yuumi.png" id="logogenerer"><p id="txtgenerer">Générer</p></div>
+            <div id="btngenerer"><img src="img/logo Yuumi.png" id="logogenerer"><p id="txtgenerer">Générer</p></div>
         </div>
     </footer>
 <script>
-    const input = document.getElementById("fileInput");
+    
+const input = document.getElementById("fileInput");
 const preview = document.getElementById("preview");
 const fileInput = document.getElementById("fileInput");
 const fileButton = document.getElementById("fileButton");
