--- a/result.html
+++ b/result.html
@@ -9,12 +9,16 @@
 
 
     <header>
-        <img src="logo Yuumi.png" alt="logo Yuumi" class="logo">
+        <a href="accueil.html">
+        <img src="img/logo Yuumi.png" alt="logo Yuumi" class="logo">
+        </a>
     </header>
 
 
+    
 
     <main>
+                <div id="mod">
         <p id="title">Vos ingrédients</p>
         <div id="searchbar-container">
             <input type="text" id="searchbar" placeholder="Rechercher un ingrédients...">
@@ -26,17 +30,17 @@
 
             <div id="ingredients">
                 <!-- Ici tu change pour mettre des boutons tout ca -->
-                <div class="ingredient" id="plus"><a href="index1.html"><img src="icone plus.png" alt="ajouter un ingredient" id="plus"></a></div>
-                <div class="ingredient" id="pain"><img class="imgingredient" src="pain.png" alt="image de pain"> <img src="icone moins.png" class="btnmoins" alt="bouton moins"></div>
-                <div class="ingredient" id="tomate"><img class="imgingredient" src="tomate.png" alt="image de tomate"><img src="icone moins.png" class="btnmoins" alt="bouton moins"></div>
-                <div class="ingredient" id="carotte"><img class="imgingredient" src="karotte.png" alt="image de carotte"><img src="icone moins.png" class="btnmoins" alt="bouton moins"></div>
-                <div class="ingredient" id="patate"><img class="imgingredient" src="patate.png" alt="image de patate"><img src="icone moins.png" class="btnmoins" alt="bouton moins"></div>
-                <div class="ingredient" id="lait"><img class="imgingredient" src="lait.png" alt="image de lait"><img src="icone moins.png" class="btnmoins" alt="bouton moins"></div>
-                <div class="ingredient" id="fromage"><img class="imgingredient" src="fromage.png" alt="image de fromage"><img src="icone moins.png" class="btnmoins" alt="bouton moins"></div>
-                <div class="ingredient"><img class="imgingredient" src="zUOIPHGz.png" alt="image de"></div>
+                <div class="ingredient" id="plus"><a href="ingrédient.html"><img src="img/icone plus.png" alt="ajouter un ingredient" id="plus"></a></div>
+                <div class="ingredient" id="pain"><img class="imgingredient" src="img/pain.png" alt="image de pain"> <img src="img/icone moins.png" class="btnmoins" alt="bouton moins"></div>
+                <div class="ingredient" id="tomate"><img class="imgingredient" src="img/tomate.png" alt="image de tomate"><img src="img/icone moins.png" class="btnmoins" alt="bouton moins"></div>
+                <div class="ingredient" id="carotte"><img class="imgingredient" src="img/karotte.png" alt="image de carotte"><img src="img/icone moins.png" class="btnmoins" alt="bouton moins"></div>
+                <div class="ingredient" id="patate"><img class="imgingredient" src="img/patate.png" alt="image de patate"><img src="img/icone moins.png" class="btnmoins" alt="bouton moins"></div>
+                <div class="ingredient" id="lait"><img class="imgingredient" src="img/lait.png" alt="image de lait"><img src="img/icone moins.png" class="btnmoins" alt="bouton moins"></div>
+                <div class="ingredient" id="fromage"><img class="imgingredient" src="img/fromage.png" alt="image de fromage"><img src="img/icone moins.png" class="btnmoins" alt="bouton moins"></div>
+                <div class="ingredient"><img class="imgingredient" src="img/zUOIPHGz.png" alt="image de"></div>
             </div>
         </div>
-
+        </div>
 
 
 
@@ -44,7 +48,9 @@
             <p id="titlerecipe">Recettes proposées :</p>
             <div>
                 <div class="recipe-card">
-                    <img src="39917640.png" alt="Recette 1" class="recipe-image">
+                    <a href="recipe.html">
+                    <img src="img/39917640.png" alt="Recette 1" class="recipe-image">
+                    </a>
                     <div class="recipe-info">
                         <p>Recette 1</p>
                         <p>description bla bla bla miam tartiflette</p>
@@ -57,21 +63,7 @@
                             </div>
                     </div>
                 </div>
-                <div class="recipe-card">
-                    <img src="39917640.png" alt="Recette 1" class="recipe-image">
-                    <div class="recipe-info">
-                        <p>Recette 1</p>
-                        <p>description bla bla bla miam tartiflette</p>
-                        <div id="bouton">
-                            <div class="bouton" id="difficulte">
-                                <p>Difficile</p>
-                            </div>
-                            <div class="bouton" id="temps">
-                                <p>1h15</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                
             </div>
         </div>
         </main>
