--- a/ingrédient.html
+++ b/ingrédient.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <main>
+        
     <div>
         <p id="title">Ajouter des ingrédients</p>
     </div>
@@ -15,31 +16,22 @@
         <input type="text" id="searchbar" placeholder="Rechercher un ingrédient...">  
     </div>
     <div id="ingredients">
-        <div class="ingredient" id="salade"><img class="imgingredient" src="allooooo.png" alt=""></div>
-        <div class="ingredient" id="pain"><img class="imgingredient" src="pain.png" alt=""></div>
-        <div class="ingredient" id="tomate"><img class="imgingredient" src="tomate.png" alt=""></div>
-        <div class="ingredient" id="carotte"><img class="imgingredient" src="karotte.png" alt=""></div>
-        <div class="ingredient" id="patate"><img class="imgingredient" src="patate.png" alt=""></div>
-        <div class="ingredient" id="lait"><img class="imgingredient" src="lait.png" alt=""></div>
-        <div class="ingredient" id="fromage"><img class="imgingredient" src="fromage.png" alt=""></div>
-        <div class="ingredient"><img class="imgingredient" src="zUOIPHGz.png" alt=""></div>
-        <div class="ingredient"><img class="imgingredient" src="zUOIPHGz.png" alt=""></div>
-        <div class="ingredient"><img class="imgingredient" src="zUOIPHGz.png" alt=""></div>
-        <div class="ingredient"><img class="imgingredient" src="zUOIPHGz.png" alt=""></div>
-        <div class="ingredient"><img class="imgingredient" src="zUOIPHGz.png" alt=""></div>
-        <div class="ingredient"><img class="imgingredient" src="zUOIPHGz.png" alt=""></div>
-        <div class="ingredient"><img class="imgingredient" src="zUOIPHGz.png" alt=""></div>
-        <div class="ingredient"><img class="imgingredient" src="zUOIPHGz.png" alt=""></div>
-        <div class="ingredient"><img class="imgingredient" src="zUOIPHGz.png" alt=""></div>
-        <div class="ingredient"><img class="imgingredient" src="zUOIPHGz.png" alt=""></div>
-        <div class="ingredient"><img class="imgingredient" src="zUOIPHGz.png" alt=""></div>
-        <div class="ingredient"><img class="imgingredient" src="zUOIPHGz.png" alt=""></div>
-        <div class="ingredient"><img class="imgingredient" src="zUOIPHGz.png" alt=""></div>
+        <div class="ingredient" id="salade"><img class="imgingredient" src="img/salade.png" alt=""></div>
+        <div class="ingredient" id="pain"><img class="imgingredient" src="img/pain.png" alt=""></div>
+        <div class="ingredient" id="tomate"><img class="imgingredient" src="img/tomate.png" alt=""></div>
+        <div class="ingredient" id="carotte"><img class="imgingredient" src="img/karotte.png" alt=""></div>
+        <div class="ingredient" id="patate"><img class="imgingredient" src="img/patate.png" alt=""></div>
+        <div class="ingredient" id="lait"><img class="imgingredient" src="img/lait.png" alt=""></div>
+        <div class="ingredient" id="fromage"><img class="imgingredient" src="img/fromage.png" alt=""></div>
+        <div class="ingredient" id="viande"><img class="imgingredient" src="zUOIPHGz.png" alt=""></div>
+
     </div>
     </main>
     <footer>
         <div id="buttonsgenerercontainer">
-            <div id="btngenerer"><img src="logo Yuumi.png" id="logogenerer"><p id="txtgenerer">Générer</p></div>
+            <a href="result.html">
+            <div id="btngenerer"><img src="img/logo Yuumi.png" id="logogenerer"><p id="txtgenerer">Générer</p></div>
+            </a>
             </div>
     </footer>
 
@@ -50,10 +42,14 @@ const panier = JSON.parse(localStorage.getItem("panier"));
 console.log(panier);
 
         const img = [
-            { id: "salade",  image_nrml: "salade.png", image_sel: "" },
-            { id: "pain",  image_nrml: "pain.png", image_sel: "pain 2.png" },
-            { id: "tomate",  image_nrml: "tomate.png", image_sel: "" },
-            { id: "carotte",  image_nrml: "karotte.png", image_sel: "" }
+            { id: "salade",  image_nrml: "img/salade.png", image_sel: "img/saladeselect.png" },
+            { id: "pain",  image_nrml: "img/pain.png", image_sel: "img/pain 2.png" },
+            { id: "tomate",  image_nrml: "img/tomate.png", image_sel: "img/tomateselect.png" },
+            { id: "carotte",  image_nrml: "img/karotte.png", image_sel: "img/carotteselect.png" },
+            { id: "patate",  image_nrml: "img/patate.png", image_sel: "img/patateselect.png" },
+            { id: "lait",  image_nrml: "img/lait.png", image_sel: "img/laitselect.png" },
+            { id: "fromage",  image_nrml: "img/fromage.png", image_sel: "img/fromageselect.png" },
+            { id: "viande",  image_nrml: "img/zUOIPHGz.png", image_sel: "img/viandeselect.png" }
         ];
     //prend tout les boutons ingrédients
 
@@ -64,10 +60,13 @@ console.log(panier);
         if (panier.includes(ing.id)) {
             ing.innerHTML = `<img class="imgingredient" src="${img.find(i => i.id === ing.id).image_sel}" alt="">`;
         }
+        else{
+            ing.innerHTML = `<img class="imgingredient" src="${img.find(i => i.id === ing.id).image_nrml}" alt="">`;
+        }
     });
 
 
-    /*
+    
     let btningredient = document.querySelectorAll(".ingredient");
     btningredient.forEach(button => {
         button.addEventListener("click", function() {
@@ -80,6 +79,7 @@ console.log(panier);
                 if (index !== -1) {
                 panier.splice(index, 1);
                 console.log(panier); //enlève l'ingrédient du panier
+                localStorage.setItem("panier", JSON.stringify(panier));
                 }   
                 return; // Sort de la fonction si l'ingrédient est déjà dans le panier
             }
@@ -87,19 +87,20 @@ console.log(panier);
                 //le met si c'est pas dedans
                 panier.push(ingredientId);
                 console.log(panier);
+                localStorage.setItem("panier", JSON.stringify(panier));
                 this.innerHTML = `<img class="imgingredient" src="${img.find(i => i.id === ingredientId).image_sel}" alt="">`;
             }
-
-
-
         });
     });
-*/
+
+
 
 const API_KEY  = "AIzaSyBWQV1wAHjnpihCP80oBuhy5iVoAtO8jd0";
 const API_URL = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent`
 
 
+
+/*
 async function askGemini(prompt, retries = 3, delay = 1500) {
     try {
         const response = await fetch(API_URL, {                                                  
@@ -158,7 +159,7 @@ document.getElementById("btngenerer").addEventListener("click", () => {
 });
 
 
-
+*/
     </script>
 
 
